@@ -384,7 +384,10 @@ Optimizations and false positive fixes in PreserveStackTrace
 @SuppressWarnings("all") disables all warnings
 SingularField now checks for multiple fields in the same declaration
 Java grammar enhanced to include AnnotationMethodDeclaration as parent node of method related children of AnnotationTypeMemberDeclaration
-JavaCC generated artifacts updated to JavaCC 4.1d1.
+JavaCC generated artifacts updated to JavaCC 4.1.
+Ant requirement is now 1.7.0 or higher for compilation
+	JUnit testing jar is packaged on 1.7.0+ only in ant binary distributions
+	Note that the ant task still works with 1.6.0 and higher
 All comment types are now stored in ASTCompilationUnit, not just formal ones
 Fixed false negative in UselessOverridingMethod
 Fixed handling of escape characters in UseIndexOfChar and AppendCharacterWithChar
